<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Therapeia</string>
    <string name="enter_name">Ingrese su nombre completo</string>
    <string name="enter_email">Ingrese su correo electronico</string>
    <string name="type_message">Type Message</string>
    <string name="label_sign_up">¡Registrate!</string>
    <string name="btn_sign_up">Registrarse</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_save">Save</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_message">Message</string>
    <string name="label_profile">Profile</string>
    <string name="enter_password">Ingrese su contraseña</string>
    <string name="enter_confirm_password">Confirme su contraseña</string>
    <string name="action_settings">Cerrar Sesion</string>
    <string name="Menu_panel">Panel</string>
    <string name="Menu_cuenta">Cuenta</string>
    <string name="Titulo_RL_Doctor">Titulo</string>
    <string name="Txt_rol">Por favor elija un rol</string>
    <string name="Btn_rol_doctor">Doctor</string>
    <string name="Btn_rol_paciente">Paciente</string>
    <string name="TxtRegistroDoctor">Registro de doctor</string>
    <string name="Et_nombre_doctor">Nombres</string>
    <string name="Et_email_doctor">Email</string>
    <string name="Et_password_doctor">Contraseña</string>
    <string name="Et_R_password_doctor">Repita la contraseña</string>
    <string name="Btn_registrar_doctor">Registrarme</string>
    <string name="CerrarSesionDoctor">Cerrar sesión</string>
    <string name="txtLoginDoctor">Login Doctores</string>
    <string name="Btn_login_doctor">Ingresar</string>
    <string name="Longin_doctor_btn">Ingresar como doctor</string>
    <string name="Btn_agregar_categoria">Agregar tipo de enfermedad</string>
    <string name="Txt_agregar_categoria">Agregar tipo de enfermedad</string>
    <string name="Et_tipo_enfermedad">Ingrese el tipo de enfermedad</string>
    <string name="Agregar_tipo_enfermedad_BD">Agregar</string>
    <string name="Item_nombre_tipo_enfer">Nombre tipo de enfermedad</string>
    <string name="Buscar_tipo_enfer">Buscar</string>
    <string name="Txt_agregar_enfermedad">Agregar enfermedad</string>
    <string name="Et_nombre_enfermedad">Nombre de enfermedad</string>
    <string name="Et_descripción_libro">Descripción</string>
    <string name="Tv_tipo_enfermedad">Tipo enfermedad</string>
    <string name="Btn_subir_enfermedad">Subir</string>
    <string name="Txt_nombre_enfer">Enfermedades</string>
    <string name="Txt_tipo_enfer">Tipo de enfermedad</string>
    <string name="Et_buscar_enfer_doctor">Buscar enfermedad</string>
    <string name="Txt_descripcion_enfer_item">Descripcion de enfermedad</string>
    <string name="Txt_tipo_enfer_doctor">Tipo de enfermedad</string>
    <string name="Txt_tamanio_enfer_doctor">5MB</string>
    <string name="Txt_fecha_enfer_doctor">dd/mm/yyyy</string>
    <string name="Btn_enfermedades">Biblioteca enfermedades</string>
    <string name="Btn_medicamentos">Biblioteca medicamento</string>
    <string name="Item_nombre_medi_doctor">Nombre tipo de medicamento</string>
    <string name="Btn_agregar_tipo_medi">Agregar tipo de medicamento</string>
    <string name="Txt_agregar_medi">Agregar medicamentos</string>
    <string name="Et_nombre_medi">Nombre de medicamento</string>
    <string name="Tv_tipo_medi">Tipo de medicamento</string>
    <string name="Txt_nombre_medi">Medicamentos</string>
    <string name="Txt_descripcion_medi">Descripción de medicamentos</string>
    <string name="Txt_tipo_medi">Tipo de medicamento</string>
    <string name="Et_buscar_medi_doctor">Buscar medicamentos</string>
    <string name="Btn_actualizar_enfer">Actualizar</string>
    <string name="Txt_actualizar_enfer">Actualizar enfermedad</string>
    <string name="Txt_actualizar_medi">Actualizar medicamento</string>
    <string name="Txt_detalle_enfer">Detalle enfermedad</string>
    <string name="nombre_enferD">Nombre enfermedad</string>
    <string name="Txt_tipo_enfe_D">Tipo de enfermedad: </string>
    <string name="tipo_enfer_D">--</string>
    <string name="Txt_fecha">Fecha: </string>
    <string name="fecha">--</string>
    <string name="Txt_tamanio">Tamaño: </string>
    <string name="tamanio">--</string>
    <string name="Txt_hojas">Nro páginas: </string>
    <string name="hojas">--</string>
    <string name="TXt_descripcion_enfer_D">Descripción: </string>
    <string name="descripcion">--</string>
    <string name="Btn_leer_enfermedad">Leer</string>
    <string name="Txt_leer_enfer">Lectura de pdf</string>
    <string name="nombres_doctor">Nombres: </string>
    <string name="Txt_nombres_doctor"> -- </string>
    <string name="email_doctor">Email: </string>
    <string name="Txt_email_doctor"> -- </string>
    <string name="tiempo_registro_doctor">Miembro desde: </string>
    <string name="Txt_tiempo_registro_doctor"> -- </string>
    <string name="rol_doctor">Rol: </string>
    <string name="Txt_rol_doctor"> -- </string>
    <string name="Txt_mas_opciones">Más opciones: </string>
    <string name="EditarPerfil_doctor">Editar Perfil</string>
    <string name="Txt_editar_perfil_doctor">Editar Perfil</string>
    <string name="Et_a_nombres">Nombres</string>
    <string name="Btn_actualizar_info">Actualizar</string>
    <string name="Txt_detalle_medi">Detalle medicamento</string>
    <string name="nombre_mediD">Nombre medicamento</string>
    <string name="Txt_tipo_mediD">Tipo de medicamento</string>
    <string name="Txt_registro_paciente">Registro de paciente</string>
    <string name="Et_edad_paciente">Edad</string>
    <string name="Txt_Login_Paciente">Login Paciente</string>
    <string name="Login_paciente_btn">Ingresar como paciente</string>
    <string name="Txt_elegir_biblioteca">Elegir biblioteca</string>
    <string name="Btn_enfer">Enfermedades</string>
    <string name="Btn_medi">Medicamentos</string>
    <string name="Agregar_usuario">Agregar Usuarios</string>
    <string name="Et_num_document">Número de documento</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm_delete_on_dismiss">Delete after dismissed</string>
    <string-array name="fade_in_time_sec_values" tools:ignore="MissingTranslation">
        <item>1</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <string name="alarm_prealarm">Gentle pre-alarm</string>
    <string name="prealarm_duration_title" tools:ignore="MissingTranslation">Pre-alarm duration</string>
    <string-array name="prealarm_duration_entries">
        <item>Off</item>
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string-array name="prealarm_duration_values" tools:ignore="MissingTranslation">
        <item>-1</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
    <string name="prealarm_summary">Pre-alarm will start
<xliff:g id="minutes">%d</xliff:g> minutes before the main alarm</string>
    <string name="info_fragment_prealarm_summary"><xliff:g id="minutes">%d</xliff:g> minutes pre-alarm</string>
    <string name="prealarm_off_summary">Pre-alarm is switched off</string>
    <string name="menu_share">Share</string>
    <string name="menu_bugreport">Send a bugreport</string>
    <string name="dialog_say_thanks_review_button">Rate the app</string>
    <string name="dialog_bugreport_hint">Describe your complaint here</string>
    <string name="longclick_dismiss_title">Longclick dismiss</string>
    <string name="longclick_dismiss_summary">Hold the dismiss button to dismiss the alarm</string>
    <string name="fade_in_time_sec_title" tools:ignore="MissingTranslation">Fade-in duration</string>
    <string-array name="fade_in_time_sec_entries">
        <item>Off</item>
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds</item>
        <item>60 seconds</item>
        <item>120 seconds</item>
    </string-array>
    <string name="fade_in_summary">Fade-in duration is <xliff:g id="seconds">%d</xliff:g> seconds</string>
    <string name="fade_in_off_summary">Fade-in is switched off</string>
    <string-array name="alarm_set_short">
        <item>Less than a minute from now</item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g></item>
        <item><xliff:g example="2 hours" id="HOURS">%2$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g></item>
        <item><xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g>, <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g>, and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
    </string-array>
    <string name="theme_title">Interface theme</string>
    <string-array name="themes_entries">
        <item>Neon</item>
        <item>Light</item>
        <item>Synth</item>
        <item>Deus Ex</item>
        <item>Abyss</item>
    </string-array>
    <string-array name="themes_values">
        <item>dark</item>
        <item>light</item>
        <item>synthwave</item>
        <item>deusex</item>
        <item>deepblue</item>
    </string-array>
    <string name="preference_list_row_layout_title">Layout style</string>
    <string-array name="preference_list_row_layout_entries">
        <item>Compact</item>
        <item>Bold</item>
        <item>Classic</item>
    </string-array>
    <string-array name="preference_list_row_layout_values">
        <item>compact</item>
        <item>bold</item>
        <item>classic</item>
    </string-array>
    <string name="simple_alarm_clock">Simple Alarm Clock</string>
    <string-array name="snooze_duration_with_off_entries">
        <item>Off</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="snooze_duration_with_off_values">
        <item>-1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string name="alarm_alert_reschedule_text">Reschedule</string>
    <string name="alarm_alert_hold_the_button_text">Hold the button!</string>
    <string name="preference_category_sound">Volumes and sound</string>
    <string name="preference_category_ui">User interface</string>
    <string name="preference_category_durations">Durations</string>
    <string name="details_no_ringtone_picker">No Ringtone provider found…</string>
    <string name="permissions_external_storage_text">It seems that we cannot play %s, probably because a permission is required. If you want, you can grant the permission. Alternatively, select a different sound. This decision can be changed in System Settings.</string>
    <string name="menu_about_title">About</string>
</resources>