<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Doctor.DetalleEnfer">
    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRLDetalle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/Ib_regresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Txt_detalle_medi" />

        <View
            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    </RelativeLayout>

    <!--Informacion de la enfermedad-->
    <ScrollView
        android:layout_below="@+id/toolbarRLDetalle"
        android:layout_above="@+id/Btn_leer_medi"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Visualizador del pdf-->
                <RelativeLayout
                    android:id="@+id/pdfRL"
                    android:layout_marginEnd="5dp"
                    android:background="#cccccc"
                    android:layout_width="100dp"
                    android:layout_height="170dp">

                    <com.github.barteksc.pdfviewer.PDFView
                        android:id="@+id/VisualizadorPDF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </RelativeLayout>

                <!--Nombre-->
                <TextView
                    android:id="@+id/nombre_enferD"
                    android:text="@string/nombre_mediD"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/pdfRL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nombre_enferD"
                    android:layout_toEndOf="@+id/pdfRL">

                    <!--tipo_enfermedad-->
                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:text="@string/Txt_tipo_mediD"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>

                        <TextView
                            android:id="@+id/tipo_medi_D"
                            android:text="@string/tipo_enfer_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>

                    </TableRow>

                    <!--Fecha-->
                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:text="@string/Txt_fecha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>

                        <TextView
                            android:id="@+id/fecha"
                            android:text="@string/fecha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>

                    </TableRow>

                    <!--Tamaño-->
                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:text="@string/Txt_tamanio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>

                        <TextView
                            android:id="@+id/tamanio"
                            android:text="@string/tamanio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>

                    </TableRow>

                    <!--paginas-->
                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:text="@string/Txt_hojas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>

                        <TextView
                            android:id="@+id/hojas"
                            android:text="@string/hojas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>

                    </TableRow>

                </TableLayout>


            </RelativeLayout>

            <TextView
                android:text="@string/TXt_descripcion_enfer_D"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/descripcion"
                android:text="@string/descripcion"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Btn_leer_medi"
        android:text="@string/Btn_leer_enfermedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>