<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragmentos_Doctor.Fragment_doctor_cuenta">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_perfil_doctor"
            android:src="@drawable/ic_img_perfil"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:layout_width="120dp"
            android:layout_height="120dp"/>

        <!--nombres-->
        <TextView
            android:id="@+id/nombres_doctor"
            android:text="@string/nombres_doctor"
            android:layout_below="@+id/img_perfil_doctor"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Txt_nombres_doctor"
            android:text="@string/Txt_nombres_doctor"
            android:layout_below="@+id/img_perfil_doctor"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Email-->
        <TextView
            android:id="@+id/email_doctor"
            android:text="@string/email_doctor"
            android:layout_below="@+id/nombres_doctor"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Txt_email_doctor"
            android:text="@string/Txt_email_doctor"
            android:layout_below="@+id/nombres_doctor"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Tiempo-->
        <TextView
            android:id="@+id/tiempo_registro_doctor"
            android:text="@string/tiempo_registro_doctor"
            android:layout_below="@+id/email_doctor"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Txt_tiempo_registro_doctor"
            android:text="@string/Txt_tiempo_registro_doctor"
            android:layout_below="@+id/email_doctor"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Rol-->
        <TextView
            android:id="@+id/rol_doctor"
            android:text="@string/rol_doctor"
            android:layout_below="@+id/tiempo_registro_doctor"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Txt_rol_doctor"
            android:text="@string/Txt_rol_doctor"
            android:layout_below="@+id/tiempo_registro_doctor"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_below="@id/rol_doctor"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Txt_mas_opciones"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--Editar informacion-->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp">
                
                <TextView
                    android:id="@+id/EditarPerfil_doctor"
                    android:text="@string/EditarPerfil_doctor"
                    app:drawableStartCompat="@drawable/ic_editar"
                    app:drawableEndCompat="@drawable/ic_siguiente"
                    android:drawablePadding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.card.MaterialCardView>

            <!--cerrar sesion-->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp">

                <TextView
                    android:id="@+id/CerrarSesionDoctor"
                    android:text="@string/CerrarSesionDoctor"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_cerrarsesion"
                    app:drawableEndCompat="@drawable/ic_siguiente" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp">

                <TextView
                    android:id="@+id/AgregarUser"
                    android:text="@string/Agregar_usuario"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_add"
                    app:drawableEndCompat="@drawable/ic_siguiente" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>


</ScrollView>