<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_sign_in"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lemon"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/lexend"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="15dp"
            android:background="@color/platino"
            android:hint="@string/enter_email"
            android:padding="12dp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:layout_marginEnd="15dp"
            android:background="@color/platino"
            android:hint="@string/enter_password"
            android:padding="12dp"
            android:textColor="@color/white" />



        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/Eletric_Indigo"
            android:layout_marginEnd="2dp"
            android:textColor="@color/white"
            android:text="@string/btn_login"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/Eletric_Indigo"
            android:textColor="@color/white"
            android:text="@string/btn_sign_up"/>


    </LinearLayout>


</FrameLayout>